<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="5dp">

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/colorSecondary"
        app:alignItems="center"
        app:justifyContent="space_between"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/goBackIcon"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="25dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/searchToolbar_goBackIcon_contentDescription"
            android:src="@drawable/ic_back_arrow"
            android:tint="@android:color/white" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:background="@drawable/bg_round_shape"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/searchToolbar_cancel_text"
            android:textColor="@android:color/white" />

        <ImageButton
            android:id="@+id/filterIcon"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="25dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/searchToolbar_searchIcon_contentDescription"
            android:src="@drawable/ic_filter"
            android:tint="#FFFFFF" />

    </com.google.android.flexbox.FlexboxLayout>

</androidx.constraintlayout.widget.ConstraintLayout>